refactor: 로직에 맞게 VoucherProgram 리팩토링