@@ -3,7 +3,6 @@ package org.prgms.voucherProgram.service;
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.BDDMockito.*;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -13,12 +12,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.prgms.voucherProgram.domain.voucher.DiscountAmount;
-import org.prgms.voucherProgram.domain.voucher.DiscountPercent;
 import org.prgms.voucherProgram.domain.voucher.FixedAmountVoucher;
 import org.prgms.voucherProgram.domain.voucher.PercentDiscountVoucher;
 import org.prgms.voucherProgram.domain.voucher.Voucher;
-import org.prgms.voucherProgram.domain.voucher.VoucherType;
+import org.prgms.voucherProgram.dto.VoucherDto;
 import org.prgms.voucherProgram.repository.voucher.VoucherRepository;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,42 +31,42 @@ class VoucherServiceTest {
     @Test
     void create_FixedAmountVoucherType_ReturnFixedAmountVoucher() {
 
-        Voucher mockVoucher = new FixedAmountVoucher(UUID.randomUUID(), 10L);
-        given(voucherRepository.save(any(FixedAmountVoucher.class))).willReturn(mockVoucher);
+        VoucherDto voucherDto = new VoucherDto(UUID.randomUUID(), UUID.randomUUID(), 1, 100L);
+        given(voucherRepository.save(any(Voucher.class))).willReturn(voucherDto.toEntity());
 
-        Voucher voucher = voucherService.create(VoucherType.FIXED_AMOUNT, 10L);
+        VoucherDto newVoucher = voucherService.create(voucherDto);
 
-        assertThat(voucher).isInstanceOf(FixedAmountVoucher.class);
-        assertThat(voucher).extracting("discountAmount")
-            .isEqualTo(new DiscountAmount(10L));
+        assertThat(newVoucher).usingRecursiveComparison()
+            .isEqualTo(voucherDto);
         then(voucherRepository).should(times(1)).save(any(Voucher.class));
     }
 
     @DisplayName("PercentDiscountVoucerType을 주면 PercentDiscountVoucher를 반환한다.")
     @Test
     void create_PercentDiscountType_ReturnPercentDiscountVoucher() {
-        Voucher mockVoucher = new PercentDiscountVoucher(UUID.randomUUID(), 10L);
-        given(voucherRepository.save(any(PercentDiscountVoucher.class))).willReturn(mockVoucher);
+        VoucherDto voucherDto = new VoucherDto(UUID.randomUUID(), UUID.randomUUID(), 2, 100L);
+        given(voucherRepository.save(any(Voucher.class))).willReturn(voucherDto.toEntity());
 
-        Voucher voucher = voucherService.create(VoucherType.PERCENT_DISCOUNT, 10L);
+        VoucherDto newVoucher = voucherService.create(voucherDto);
 
-        assertThat(voucher).isInstanceOf(PercentDiscountVoucher.class);
-        assertThat(voucher).extracting("discountPercent")
-            .isEqualTo(new DiscountPercent(10L));
+        assertThat(newVoucher).usingRecursiveComparison()
+            .isEqualTo(voucherDto);
         then(voucherRepository).should(times(1)).save(any(Voucher.class));
     }
 
     @DisplayName("모든 바우처를 반환한다.")
     @Test
     void findAllVoucher_ReturnAllVoucher() {
-        List<Voucher> mockVouchers = Arrays.asList(new FixedAmountVoucher(UUID.randomUUID(), 10L),
-            new PercentDiscountVoucher(UUID.randomUUID(), 20L));
+        Voucher voucherOne = new FixedAmountVoucher(UUID.randomUUID(), 10L);
+        Voucher voucherTwo = new PercentDiscountVoucher(UUID.randomUUID(), UUID.randomUUID(), 20L);
+        List<Voucher> mockVouchers = List.of(voucherOne, voucherTwo);
         given(voucherRepository.findAll()).willReturn(mockVouchers);
 
-        List<Voucher> vouchers = voucherService.findAllVoucher();
+        List<VoucherDto> vouchers = voucherService.findAllVoucher();
 
         assertThat(vouchers).hasSize(2)
-            .isEqualTo(mockVouchers);
+            .usingRecursiveFieldByFieldElementComparatorIgnoringFields()
+            .contains(VoucherDto.from(voucherOne), VoucherDto.from(voucherTwo));
         then(voucherRepository).should(times(1)).findAll();
     }
 }
